[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Background/space.png" type="Texture" id=1]
[ext_resource path="res://Scripts/menu_stats.gd" type="Script" id=2]
[ext_resource path="res://Scripts/STATS.gd" type="Script" id=3]
[ext_resource path="res://ola/poco/Poco.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/transicao.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="menu_stats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="transition" parent="." instance=ExtResource( 6 )]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 1124 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1689, 395 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 71.0
margin_top = 558.0
margin_right = 1209.0
margin_bottom = 683.0
custom_constants/separation = 850

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 80.0
margin_bottom = 125.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "BACK"
flat = true

[node name="STATS" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="shots" type="Label" parent="STATS"]
margin_left = 220.0
margin_top = 400.0
margin_right = 428.0
margin_bottom = 432.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 4 )
text = "SHOTS FIRED"

[node name="num_shots" type="Label" parent="STATS"]
margin_left = 880.0
margin_top = 400.0
margin_right = 971.0
margin_bottom = 432.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1

[node name="num_deaths" type="Label" parent="STATS"]
margin_left = 880.0
margin_top = 280.0
margin_right = 971.0
margin_bottom = 312.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1

[node name="num_enemies" type="Label" parent="STATS"]
margin_left = 880.0
margin_top = 170.0
margin_right = 971.0
margin_bottom = 202.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1

[node name="deaths" type="Label" parent="STATS"]
margin_left = 220.0
margin_top = 280.0
margin_right = 340.0
margin_bottom = 312.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 4 )
text = "DEATHS"

[node name="enmies" type="Label" parent="STATS"]
margin_left = 220.0
margin_top = 170.0
margin_right = 352.0
margin_bottom = 202.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 4 )
text = "ENEMIES"

[connection signal="mouse_entered" from="HBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
